// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BoolField> tests <BoolField> - rendering - disabled 1`] = `
<div>
  {"ref":{"id":"hire","binding":"hire"},"html":"&lt;div class=\\"form-check\\"&gt;\\n    &lt;input type=\\"checkbox\\" id=\\"hire\\" name=\\"hire\\" class=\\"form-check-input\\" disabled/&gt;\\n    &lt;label class=\\"form-check-label\\" for=\\"hire\\"&gt;Hire?&lt;/label&gt;\\n&lt;/div&gt;","disabled":true,"setValueFromModelCode":{"code":"document.getElementById(\\"hire\\").checked = data?.hire;"}}
</div>
`;

exports[`<BoolField> tests <BoolField> - rendering 1`] = `
<div>
  {"ref":{"id":"hire","binding":"hire"},"html":"&lt;div class=\\"form-check\\"&gt;\\n    &lt;input type=\\"checkbox\\" id=\\"hire\\" name=\\"hire\\" class=\\"form-check-input\\" checked/&gt;\\n    &lt;label class=\\"form-check-label\\" for=\\"hire\\"&gt;Hire?&lt;/label&gt;\\n&lt;/div&gt;","disabled":false,"setValueFromModelCode":{"code":"document.getElementById(\\"hire\\").checked = data?.hire;"},"writeValueToModelCode":{"code":"formData.hire = document.getElementById(\\"hire\\").checked;"}}
</div>
`;
